chore: add too many request docs
